[#181] feat(post): 모집 인원 호스트 포함으로 변경