@@ -14,7 +14,7 @@ public class InvalidRecruitCapacityException extends BusinessException {
 
     public static InvalidRecruitCapacityException insufficientCapacity(int current, int requested) {
         return new InvalidRecruitCapacityException(
-                String.format("모집 인원은 현재 신청자 수(%d명)보다 적을 수 없습니다. 요청된 인원: %d명", current, requested)
+                "모집 인원은 현재 인원(%d명)보다 적을 수 없습니다. 요청된 인원: %d명".formatted(current, requested)
         );
     }
 }
